jojae/testjojae/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    #nginx.ingress.kubernetes.io/upstream-hash-by: "true"
spec:
  ingressClassName: nginx
  rules:
  #- host: foo.bar.com 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: was
            port:
              number: 80
